# desktop

./: .env.example  .gitignore  .npmrc  .pnpmfile.cjs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL_SETUP.md  README.md  comments.py  components.json  dev-app-update.yml  drizzle.config.ts  eslint.config.js  forge.config.mjs  forge.config.ts  index.html  jest.config.js  jest.config.mjs  jest.setup.ts  package.json  pnpm-lock.yaml  privacy.md.example  setup.sh  tailwind.config.ts  template.html  terms.md.example  tsconfig.base.json  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  update-config.json  vite.config.mjs  vite.config.ts  vite.main.config.mjs  vite.main.config.ts  vite.preload.config.mjs  vite.preload.config.ts  vite.renderer.config.mjs  vite.renderer.config.ts  vitest.config.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.bridge.json  vite.config.bridge.ts
src-tauri/bridge/: agent-bridge.ts  hcs10-bridge.ts  hcs10-schemas.ts  index.ts  inscriber-helpers.ts  mirror-node-bridge.ts  transaction-parser-bridge.ts
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: desktop.json  events.json
src-tauri/resources/: agent-bridge.js  hcs10-bridge.js  hcs10-schemas.js  inscriber-helpers.js  mirror-node-bridge.js  transaction-parser-bridge.js
src-tauri/src/: agent.rs  agent_backend.rs  agent_services.rs  browser.rs  config.rs  connection.rs  credentials.rs  entity.rs  hcs10.rs  logging.rs  main.rs  main_tests.rs  mcp.rs  mcp_registry.rs  mirror.rs  node_agent.rs  session.rs  transaction_parser.rs  wallet_bridge.rs
(+669 files in other folders)
