cargo-features = ["edition2024"]

[package]
name = "desktop-tauri"
version = "0.0.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.5", features = ["unstable", "test"] }
tauri-utils = "2.7.0"
aes-gcm = { version = "0.9", features = ["std"] }
rand = "0.8"
scrypt = "0.11"
base64 = "0.21"
aes = "0.7"
base64ct = "=1.7.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.10", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
open = "5.1"
tauri-plugin-autostart = "2.5.0"
once_cell = "1.19"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "fs"] }
rmcp = { version = "0.7.0", features = ["client", "transport-child-process"] }
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = { version = "0.6.2", features = ["std"] }
objc2-foundation = { version = "0.3.1", features = ["std"] }
objc2-web-kit = { version = "0.3.1", features = ["std"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
httpmock = "0.7"
